# ink-playground

./: .cspell.json  .dockerignore  .eslintrc  .gitignore  .gitlab-ci.yml  .prettierignore  .prettierrc  .yarnrc.yml  ARCHITECTURE.md  Cargo.toml  Dockerfile  Dockerfile.bak  Dockerfile.compiler  FILE_HEADER  Makefile  README.md  architecture1.xml  architecture2.xml  architecture3.xml  change-output.txt  daemon.json  docker-compose.yml  install-shiftfs.sh  markdown.config.js  nohup.out  on-start.sh  output.ts  package.json  prometheus.yml  rustfmt.toml  webdriver.json
.github/: dependabot.yml
.github/workflows/: compiler_docker.yml  compiler_docker_push.yml  docker.yml  ink_version_update.yml  kubernetes.yml  makefile.yml  playground.yml  rust.yml  ts.yml  typescript.yml  wasm_ts.yml
assets/: architecture1.xml  architecture2  architecture2.xml  architecture3.xml
compiler/: Cargo.toml  Dockerfile  README.md
config/: ink_versions.json  prometheus.yml  versions.json
config/data/wal/: 00000000  00000001  00000003  00000004  00000005
crates/backend/: .gitignore  Cargo.toml
crates/backend/src/: cli.rs  env.rs  lib.rs  main.rs
crates/backend/src/bindings/: generate.rs  mod.rs  package_json.rs  utils.rs
crates/backend/src/routes/: compile.rs  frontend.rs  mod.rs
crates/backend/src/services/: compile.rs  contract.rs  contract_kubernetes.rs  example_code.rs  format.rs  frontend.rs  mod.rs  rust_format.rs  sandbox.rs  version.rs
crates/backend/src/services/gist/: common.rs  create.rs  load.rs  mod.rs
crates/change_json/: Cargo.toml
crates/change_json/src/: change_json.rs  crate_graph_json.rs  lib.rs
crates/contract/: Cargo.toml  lib.rs
crates/crate_extractor/: Cargo.toml
crates/crate_extractor/src/: cli.rs  load_change.rs  main.rs  reload.rs
crates/generate-bindings/: Cargo.toml
crates/generate-bindings/src/: cli.rs  main.rs
crates/playground/: Cargo.toml  jest.config.js  package.json  tsconfig.json  webpack.config.js
crates/playground/js/: App.tsx  Wasm.tsx  Welcome.tsx  index.html  wasm-worker.ts  wasm.worker.ts
crates/playground/js/__tests__/: App.test.tsx  Welcome.test.tsx
crates/playground/src/: lib.rs  utils.rs
crates/playground/tests/: web.rs
crates/playground/www/: .gitignore  tsconfig.jest.json  webpack.config.js
crates/playground/www/src/: App.tsx  index.tsx
crates/rust-analyzer/: Cargo.toml
crates/rust-analyzer/src/: lib.rs
crates/rust_analyzer/: Cargo.toml  LICENSE_MIT
crates/rust_analyzer/src/: lib.rs
crates/rust_analyzer/tests/: web.rs
crates/rust_analyzer/www/: README.md  jest.config.js  package.json  webpack.config.js
crates/rust_analyzer/www/src/: App.tsx
crates/rust_analyzer/www/src/__tests__/: App.test.tsx
crates/rust_analyzer_wasm/: .gitignore  Cargo.toml  webdriver.json
crates/rust_analyzer_wasm/src/: lib.rs  return_types.rs  to_proto.rs
crates/rust_analyzer_wasm/tests/: web.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: build_command.rs  docker_command.rs  example_code.rs  lib.rs
docker/: Dockerfile.compiler-4.0.0  Dockerfile.compiler-4.0.1  Dockerfile.compiler-4.1.0  Dockerfile.compiler-4.2.0  Dockerfile.compiler-4.2.1  Dockerfile.compiler-4.3.0
fmttest/: input.rs
kubernetes/: clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  namespace.yaml  pod.yaml  role.yaml  service.yaml  serviceaccount.yaml  setup.sh
kubernetes_configs/: clusterrolebinding.yaml  pod.yaml  service.yaml
monitoring/prometheus/: prometheus.yml
prometheus/: prometheus.yml
scripts/: generate_ink_releases.sh  ink-compiler.sh  update_ink_version_to_latest.sh
src/: change_json.rs  crate_graph_json.rs  load_cargo.rs  load_change.rs  main.rs  reload.rs
sysbox/: daemon.json  docker-pull.sh  on-start.sh
tmp1/: input.rs
tmp1/output/: contract.contract
