[package]
name = "contract"
version = "0.1.0"
edition = "2021"
authors = ["Achim Schneider <achim@parity.io>"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
ink_primitives = { version = "3.0.0-rc8", default-features = false }
ink_metadata = { version = "3.0.0-rc8", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc8", default-features = false, features = ["ink-debug"] }
ink_storage = { version = "3.0.0-8", default-features = false }
ink_lang = { version = "3.0.0-rc8", default-features = false }
ink_prelude = { version = "3.0.0-rc8", default-features = false }
ink_eth_compatibility = { version = "3.0.0-rc8", default-features = false }

scale = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
scale-info = { version = "1", default-features = false, features = ["derive"], optional = true }

[lib]
name = "contract"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[profile.release]
overflow-checks = false

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
]
ink-as-dependency = []
ink-experimental-engine = ["ink_env/ink-experimental-engine"]
