[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Achim Schneider <achim@parity.io>"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
actix-web = "4.2.1"
actix-web-prom = "0.6.0"
actix-files = "0.6.1"
clap = { version = "4.1.1" , features = [ "derive", "env" ]}
serde_json = "1.0.91"
serde = "1.0.152"
actix-cors = "0.6.4"
typescript-type-def = "0.5.5"
futures = "0.3.25"
hubcaps = "0.5.0"
tokio-compat-02 = "0.2.0"
hyper = "0.14.24"
sandbox = { path = "../sandbox" }

[dev-dependencies]
actix-rt = "2.7.0"

