[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Achim Schneider <achim@parity.io>"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
actix-web = "4.3.1"
actix-web-prom = "0.6.0"
actix-files = "0.6.2"
clap = { version = "4.3.2" , features = [ "derive", "env" ]}
serde_json = "1.0.96"
serde = "1.0.163"
actix-cors = "0.6.4"
typescript-type-def = "0.5.6"
futures = "0.3.27"
hubcaps = { git = "https://github.com/achimcc/hubcaps" }
tokio-compat-02 = "0.2.0"


sandbox = { path = "../sandbox" }

[dev-dependencies]
actix-rt = "2.8.0"

