[package]
name = "change_json"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0.130", features = ["derive"] }

base_db = {package = "ra_ap_base_db", version = "0.0.71"}
cfg = {package = "ra_ap_cfg", version = "0.0.71"}
tt = {package = "ra_ap_tt", version = "0.0.71"}