[package]
name = "change_json"
version = "0.1.0"
edition = "2018"
authors = ["Achim Schneider <achim@parity.io>"]

[lib]
test = true
doctest = false

[dependencies]

serde = { version = "1.0.130", features = ["derive"] }

base_db = {package = "ra_ap_base_db", version = "0.0.72"}
cfg = {package = "ra_ap_cfg", version = "0.0.72"}
tt = {package = "ra_ap_tt", version = "0.0.72"}