[package]
name = "change_json"
version = "0.1.0"
edition = "2021"
authors = ["Achim Schneider <achim@parity.io>"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
serde = { version = "1.0.138", features = ["derive"] }
base_db = { package = "ra_ap_base_db", version = "0.0.104" }
cfg = { package = "ra_ap_cfg", version = "0.0.104" }
tt = { package = "ra_ap_tt", version = "0.0.104" }
