[package]
name = "crate-extractor"
version = "0.1.0"
edition = "2021"
authors = ["Achim Schneider <achim@parity.io>"]
license = "Apache-2.0"

[dependencies]
clap = "3.0.0-beta.4"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = { version = "1.0.82", features = ["preserve_order"] }
crossbeam-channel = "0.5.5"
anyhow = "1.0.58"
log = "0.4.17"
tracing = "0.1.35"
ide_db = { package = "ra_ap_ide_db", version = "0.0.122" }
ide = { package = "ra_ap_ide", version = "0.0.122" }
hir = { package = "ra_ap_hir", version = "0.0.122" }
project_model = { package = "ra_ap_project_model", version = "0.0.122" }
vfs = { package = "ra_ap_vfs", version ="0.0.122" }
tt = { package = "ra_ap_tt", version = "0.0.122" }
vfs_notify = { package = "ra_ap_vfs-notify", version = "0.0.122" }
profile = { package = "ra_ap_profile", version = "0.0.122" }

change_json = { path = "../change_json" }