[package]
name = "crate-extractor"
version = "0.1.0"
edition = "2021"
authors = ["Achim Schneider <achim@parity.io>"]
license = "Apache-2.0"

[dependencies]
clap = { version =  "4.3.2", features = [ "derive" ] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["preserve_order"] }
crossbeam-channel = "0.5.8"
anyhow = "1.0.71"
log = "0.4.18"
tracing = "0.1.38"
ide_db = { package = "ra_ap_ide_db", version = "0.0.120" }
ide = { package = "ra_ap_ide", version = "0.0.120" }
hir = { package = "ra_ap_hir", version = "0.0.120" }
project_model = { package = "ra_ap_project_model", version = "0.0.120" }
vfs = { package = "ra_ap_vfs", version ="0.0.120" }
tt = { package = "ra_ap_tt", version = "0.0.120" }
vfs_notify = { package = "ra_ap_vfs-notify", version = "0.0.120" }
profile = { package = "ra_ap_profile", version = "0.0.120" }

change_json = { path = "../change_json" }