[package]
name = "generate-bindings"
version = "0.1.0"
edition = "2021"
authors = ["Achim Schneider <achim@parity.io>"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
clap = "4.0.23"
ts-rs = { git = "https://github.com/Aleph-Alpha/ts-rs", branch = "main", features = [
    "serde-compat",
] }

backend = { path = "../backend" }
