[package]
name = "generate-bindings"
version = "0.1.0"
edition = "2021"
authors = ["Achim Schneider <achim@parity.io>"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
clap = { version = "4.1.1", features = [ "derive" ] }
ts-rs = { version = "6.2.1", features = ["serde-compat" ] }
serde = { version = "1.0.152", features = ["derive", "rc"] }
quote = "1.0.23"
backend = { path = "../backend" }
