[package]
name = "generate-bindings"
version = "0.1.0"
edition = "2021"
authors = ["Achim Schneider <achim@parity.io>"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
clap = { version = "4.1.8", features = [ "derive" ] }
serde = "1"
backend = { path = "../backend" }
typescript-type-def = "0.5.6"
