[package]
name = "rust_analyzer_wasm"
version = "0.1.0"
edition = "2021"
authors = ["Achim Schneider <achim@parity.io>"]
license = "Apache-2.0"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lsp-types = { version = "0.94.0", features = ["proposed"] }
console_error_panic_hook = { version = "0.1.7" }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
log = { version = "0.4.17", features = ["release_max_level_warn"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["preserve_order"] }
serde_repr = "0.1.11"
serde-wasm-bindgen = "0.5.0"
stacker = "0.1.15"
wasm-bindgen = "0.2.81"
rayon = "1.7.0"
wasm-bindgen-rayon = "1.0.3"
change_json = {path = "../change_json" }

ide_db = {package = "ra_ap_ide_db", version = "0.0.149"}
ide = {package = "ra_ap_ide", version = "0.0.149"}
syntax = {package = "ra_ap_syntax", version = "0.0.149"}

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]

[dev-dependencies]
wasm-bindgen-test = "0.3.31"
wasm-bindgen-futures = "0.4.31"
js-sys = "0.3.58"
cfg = { package = "ra_ap_cfg", version = "0.0.120" }
