[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"
authors = ["Achim Schneider <achim@parity.io>"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
serde = "1.0.140"
tempdir = "0.3.7"
snafu = "0.6.10"
log = "0.4.17"
tokio = { version = "1.19.2", features = [
    "macros",
    "time",
    "process",
    "rt-multi-thread",
] }
ts-rs = { git = "https://github.com/Aleph-Alpha/ts-rs", branch = "main", features = [
    "serde-compat",
] }
