[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"
authors = ["Achim Schneider <achim@parity.io>"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
serde = { version = "1.0.160", features = [ "derive" ] }
tempdir = "0.3.7"
snafu = "0.7.4"
log = "0.4.17"
tokio = { version = "1.28.1", features = [
    "macros",
    "time",
    "process",
    "rt-multi-thread",
] }
ts-rs = { version = "6.2.1", features = [
    "serde-compat",
] }
typescript-type-def = "0.5.6"